@@ -82,11 +82,11 @@ bool file_analysis::X509::EndOfFile()
 	RecordVal* cert_record = ParseCertificate(cert_val, GetFile());
 
 	// and send the record on to scriptland
-	mgr.QueueEvent(x509_certificate, {
-		GetFile()->GetVal()->Ref(),
-		cert_val->Ref(),
-		cert_record->Ref(), // we Ref it here, because we want to keep a copy around for now...
-	});
+	if ( x509_certificate )
+		mgr.Enqueue(x509_certificate,
+		            IntrusivePtr{NewRef{}, GetFile()->GetVal()},
+		            IntrusivePtr{NewRef{}, cert_val},
+		            IntrusivePtr{NewRef{}, cert_record});
 
 	// after parsing the certificate - parse the extensions...
 
@@ -420,7 +420,7 @@ void file_analysis::X509::ParseSAN(X509_EXTENSION* ext)
 			}
 		}
 
-		RecordVal* sanExt = new RecordVal(BifType::Record::X509::SubjectAlternativeName);
+		auto sanExt = make_intrusive<RecordVal>(BifType::Record::X509::SubjectAlternativeName);
 
 		if ( names != 0 )
 			sanExt->Assign(0, names);
@@ -436,10 +436,9 @@ void file_analysis::X509::ParseSAN(X509_EXTENSION* ext)
 
 		sanExt->Assign(4, val_mgr->GetBool(otherfields));
 
-		mgr.QueueEvent(x509_ext_subject_alternative_name, {
-			GetFile()->GetVal()->Ref(),
-			sanExt,
-		});
+		mgr.Enqueue(x509_ext_subject_alternative_name,
+		            IntrusivePtr{NewRef{}, GetFile()->GetVal()},
+		            std::move(sanExt));
 	GENERAL_NAMES_free(altname);
 	}
 
